Now is finished

--- a/Recipies.html
+++ b/Recipies.html
@@ -44,12 +44,50 @@
         <div class="col"> 
             <h2>Pancakes</h2>
             <img alt="Pancake" class="imagine" src="pancake.jpg">
-            <p>	Cottages, double-decker buses, lots of tea and grey, rainy weather. We all know about those, but there is much more than that when it comes to England. The largest part of the four "home nations" that make up the United Kingdom has lots to offer to the tourists, being a green and pleasant land and the most happening place in the world, both at the same time.</p>
+            <p> 2 eggs<br> 
+                1 3/4 cup milk<br> 
+                1 teaspoon vanilla essence<br> 
+                2 cups self-raising flour<br> 
+                1/3 cup CSR Caster Sugar<br> 
+                Butter, for frying, plus extra, to serve<br> 
+                Maple syrup, to serve<br> 
+                
+                Step 1<br> 
+                Whisk eggs, milk and vanilla together in a jug. Sift flour into a large bowl. Stir in sugar.<br> 
+                 Make a well in the centre. Add milk mixture. Whisk until just combined.<br> 
+                Step 2<br> 
+                Heat a large non-stick frying pan over medium heat. Grease pan with butter or spray with<br>  
+                cooking oil. Using 1/4 cup mixture per pancake, cook 2 pancakes for 2 minutes or until bubbles<br>  
+                appear on surface. Turn and cook for a further 1-2 minutes or until cooked through. Transfer to<br>  
+                a plate. Cover loosely with foil to keep warm. Repeat with remaining mixture, greasing pan with<br>  
+                butter or cooking oil between batches.<br> 
+                Step 3<br> 
+                Serve with maple syrup and extra butter.<br> 
+            </p>
         </div>
         <div class="col">
             <h2>CheeseCake</h2>
             <img alt="CheeseCake"class="imagine" src="cheeseCake.jpg">
-            <p>Popularly known as the world's "living art gallery", Italy is an exotic place of both art and architectural masterpieces created throughout history, attracting hundreds of thousands of travelers each year. No visit to Italy is complete without a trip to see the most remarkable cathedral in Europe, the Leaning Tower of Pisa. You can visit Rome to look for antique treasures from several of the world's most famous painters. Florence is awash in history with ancient churches, villas, and palazzos. Every turn in Venice is a piece of history, whether it's a 13th century church, renaissance piazza, or monument. The Doge's Palace and the Bridge of Sighs are just a couple landmarks worth ment</p>
+            <p>1 1/4 cups sugar, divided 3 (8 ounce) packages PHILADELPHIA Cream Cheese, softened<br> 
+                1 cup BREAKSTONE'S or KNUDSEN Sour Cream<br> 
+                2 teaspoons vanilla<br>
+                3 eggs<br> 
+                1 (21 ounce) can cherry pie filling<br> 
+                
+                Step 1<br> 
+                Heat oven to 350 degrees F.<br> 
+                Step 2<br> 
+                Mix graham crumbs, butter and 1/4 cup sugar; press onto bottom of 9-inch springform pan.<br> 
+                Step 3<br>  
+                Beat cream cheese and remaining sugar in large bowl with mixer until blended. Add sour cream<br>  
+                and vanilla; mix well. Add eggs, 1 at a time, beating on low speed after each addition just<br>  
+                until blended. Pour over crust.<br> 
+                Step 4<br>  
+                Bake 1 hour to 1 hour 10 min. or until center is almost set. Run knife around rim of pan to loosen<br> 
+                cake; cool before removing rim. Refrigerate cheesecake 4 hours.<br> 
+                Step 5<br> 
+                Top with pie filling before serving<br> 
+            </p>
         </div>
     </div>
 </body>
