--- a/AboutUs.html
+++ b/AboutUs.html
@@ -17,7 +17,7 @@
              <nav>
                  <ul>
                     <li><a href="MyWebpage.html">Home</a></li>
-                    <li><a href= "Recipes.html">Recipes</a></li>
+                    <li><a href= "Recipies.html">Recipies</a></li>
                     <li><a href="AboutUs.html">About Us</a></li>
                   </ul>
              </nav>
